--- a/src/main/resources/project/licenta/library.fxml
+++ b/src/main/resources/project/licenta/library.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -11,18 +12,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+
 <ScrollPane prefHeight="600.0" prefWidth="910.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Library">
    <content>
       <AnchorPane prefHeight="800.0" prefWidth="908.0">
          <children>
-            <ImageView fitHeight="800.0" fitWidth="897.0" layoutX="6.0" pickOnBounds="true">
+            <ImageView fitHeight="849.0" fitWidth="919.0" layoutX="-5.0" pickOnBounds="true">
                <image>
                   <Image url="@images/login_background.jpg" />
                </image>
             </ImageView>
             <AnchorPane fx:id="paneMenu" layoutY="19.0" prefHeight="73.0" prefWidth="895.0">
                <children>
-                  <ImageView fitHeight="98.0" fitWidth="898.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
+                  <ImageView fitHeight="98.0" fitWidth="914.0" layoutX="-1.0" layoutY="-26.0" pickOnBounds="true">
                      <image>
                         <Image url="@images/menu_background.jpg" />
                      </image>
@@ -130,7 +132,7 @@
                   <Label fx:id="lblError" layoutX="104.0" layoutY="14.0" />
                </children>
             </AnchorPane>
-            <Label layoutX="48.0" layoutY="188.0" text="To see all the books" textFill="#d9e9f2">
+            <Label layoutX="48.0" layoutY="156.0" text="To add a book " textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
@@ -140,8 +142,7 @@
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
-            <TableView fx:id="tblBooks" layoutX="33.0" layoutY="253.0" prefHeight="151.0" prefWidth="270.0" visible="false" />
-            <Label layoutX="48.0" layoutY="156.0" text="To add a book " textFill="#d9e9f2">
+            <Label layoutX="48.0" layoutY="188.0" text="To see all the books" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
@@ -151,6 +152,57 @@
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
+            <TableView fx:id="tblBooks" layoutX="48.0" layoutY="295.0" prefHeight="151.0" prefWidth="270.0" visible="false" />
+            <Label layoutX="48.0" layoutY="220.0" text="To add a reminder for the book" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnReminder" layoutX="279.0" layoutY="215.0" mnemonicParsing="false" onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+            <AnchorPane fx:id="paneReminder" layoutX="380.0" layoutY="564.0" prefHeight="271.0" prefWidth="478.0" visible="false">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="66.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/Subject_icon.png" />
+                           </image>
+                        </ImageView>
+                        <ComboBox fx:id="cmbBookName" layoutX="47.0" layoutY="2.0" onAction="#cmbBookNameOnChange" prefHeight="26.0" prefWidth="200.0" promptText="Book name" />
+                     </children>
+                  </AnchorPane>
+                  <Label fx:id="lblErrorReminder" layoutX="24.0" layoutY="30.0" />
+                  <AnchorPane layoutX="14.0" layoutY="116.0" prefHeight="38.0" prefWidth="329.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="Return deadline" textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="dtpDeadline" editable="false" layoutX="140.0" layoutY="6.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="14.0" layoutY="161.0" prefHeight="35.0" prefWidth="434.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="42.0" layoutY="1.0" text="How many days before" textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cmbDays" layoutX="217.0" layoutY="5.0" prefHeight="26.0" prefWidth="210.0" />
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="btnNewReminder" layoutX="142.0" layoutY="210.0" mnemonicParsing="false" onAction="#btnNewReminderOnClick" prefHeight="46.0" prefWidth="150.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Add" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </content>
