--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
    <children>
-      <ImageView fitHeight="617.0" fitWidth="933.0" layoutX="-5.0" layoutY="62.0" pickOnBounds="true">
+      <ImageView fitHeight="610.0" fitWidth="933.0" layoutX="-5.0" layoutY="69.0" pickOnBounds="true">
          <image>
             <Image url="@images/login_background.jpg" />
          </image>
@@ -27,7 +28,7 @@
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnBack" layoutX="621.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to menu" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnBack" layoutX="655.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Semesters" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -37,48 +38,65 @@
                   <Image url="@images/icon.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnSemesterfee" layoutX="422.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2" visible="false">
+            <Button fx:id="btnSemesterfee" layoutX="506.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
+            <Label fx:id="lblMenu" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
+               <font>
+                  <Font name="Gadugi" size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/menu.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Label>
+            <Label fx:id="lblMenuClose" layoutX="186.0" layoutY="9.0" textFill="#ece3e3">
+               <font>
+                  <Font name="Gadugi" size="16.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/menu.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneButtons" layoutX="32.0" layoutY="188.0" prefHeight="406.0" prefWidth="341.0">
+      <ScrollPane fx:id="scpaneButtons" hbarPolicy="NEVER" layoutX="29.0" layoutY="128.0" prefHeight="491.0" prefWidth="413.0" style="-fx-background: transparent; -fx-background-color: transparent;" vbarPolicy="NEVER">
+         <content>
+            <AnchorPane fx:id="paneButtons" prefHeight="489.0" prefWidth="218.0">
+               <children>
+                  <Label fx:id="lblSemester" layoutX="14.0" layoutY="14.0" text="asd" />
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <AnchorPane fx:id="paneSlider" layoutY="95.0" prefHeight="582.0" prefWidth="303.0" style="-fx-background-color: #00134d;">
          <children>
-            <Button fx:id="btnActual" layoutX="171.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+            <Button fx:id="btnActual" layoutX="34.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="31.0" prefWidth="199.0" style="-fx-background-color: transparent;" text="To add actual subjects" textAlignment="JUSTIFY" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
-            <Label layoutX="14.0" layoutY="3.0" text="To add actual subjects" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="29.0" text="To add optional subjects" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Label>
-            <Button fx:id="btnOptional" layoutX="188.0" layoutY="24.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+            <Button fx:id="btnOptional" layoutX="25.0" layoutY="112.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="31.0" prefWidth="218.0" style="-fx-background-color: transparent;" text="To add optional subjects" textAlignment="JUSTIFY" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
-            <Label layoutX="14.0" layoutY="55.0" text="To add subjects from previous years" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Label>
-            <Button fx:id="btnPrevious" layoutX="268.0" layoutY="50.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+            <Button fx:id="btnPrevious" layoutX="14.0" layoutY="144.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="31.0" prefWidth="282.0" style="-fx-background-color: transparent;" text="To add subjects from previous years" textAlignment="JUSTIFY" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" />
       <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="102.0" prefWidth="450.0" visible="false">
          <children>
             <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
